gatekeeper/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  containers:
  - name: good-container
    image: nginxinc/nginx-unprivileged
    securityContext:
      runAsUser: 1000
